2005-03-03  Kevin Buettner  <kevinb@redhat.com>

	* lib/crc32.h, lib/crc32.c: New files.
	* lib/Makefile.am (librda_la_SOURCES): Add crc32.c to list.
	* lib/Makefile.in: Regenerate.
	* lib/gdbserv-state.c (crc32.h): Include.
	(read_memory, do_qCRC_packet): New functions.
	(gdbserv_data_packet): Add support for qCRC packet.

2005-02-07  Jim Blandy  <jimb@redhat.com>

	Regenerate Makefile.in files generated by top-level configure
	script using Automake 1.9.3.
	* lib/Makefile.am: Don't write out rules for both '.a' and '.la'
	versions of the library.  Libtool generates a '.a' library
	automatically.
	* Makefile.in, lib/Makefile.in, qe/Makefile.in,
	samples/Makefile.in: Regenerated.

2004-12-09  Jim Blandy  <jimb@redhat.com>

	* configure.in: Clean up junk whitespace.  Don't call
	AC_CONFIG_SUBDIRS on variables' values; invoke it on a constant
	value, at each place we add a directory to targ_subdirs, as
	recommended by the autoconf manual.
	* aclocal.m4, configure: Regenerated.

2004-10-07  Jim Blandy  <jimb@redhat.com>

	* lib/gdbserv-state.c (do_get_registers_p_packet): Don't produce a
	';' trailing the register value unless there are more register
	values to come.  This makes the multi-register packet
	upward-compatible with the single-register request / reply
	expected by GDB.

	* samples/async.c: #define _GNU_SOURCE before #including any
	files, to get prototypes for GNU-specific functions like
	strsignal.

2004-09-24  Jim Blandy  <jimb@redhat.com>

	* lib/gdbserv-output.c, samples/demo-target.c, samples/main.c,
	samples/poll.c: #include <string.h>.

2004-09-14  Jim Blandy  <jimb@theseus.home>

	* HOWTO: Fix typos.

2004-07-23  Michael Snyder  <msnyder@redhat.com>

	* MAINTAINERS: Remove Andrew Cagney, at his request.

2004-07-09  Michael Snyder  <msnyder@redhat.com>

	* samples/demo-target.c (demo_set_thread_mem): Allocate new 
	simulated memory in hunks, rather than one byte at a time.
	If target_mem.base moves down, copy contents up.
